fixed lots of spacing issues

--- a/abilities/abilities.css
+++ b/abilities/abilities.css
@@ -45,7 +45,7 @@
 }
 
 #list-table tbody {
-    height: 400px;
+    height: 500px;
 }
 
 #list-table tr {
