--- a/resources/resources.css
+++ b/resources/resources.css
@@ -1,3 +1,7 @@
+.row {
+    --bs-gutter-x: 0;
+}
+
 .content {
     margin-top: 0;
 }
@@ -87,6 +91,10 @@ h4 {
 
 .form-break {
     display: none;
+}
+
+#sendBtn {
+    text-align: center;
 }
 
 @media (max-width: 768px) {
